<resources>
    <string name="app_name">Password manager</string>
    <string name="app_name_full">Simple password manager</string>
    <string name="hi_username">Hi,</string>
    <string name="inputLogin">Login</string>
    <string name="inputPassword">Master password</string>
    <string name="inputPassword2">Repeat master password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="helloSubText">Create new account</string>
    <string name="errNumOfText">at least 3 characters</string>
    <string name="errPass">between from 4 to 20 alphanumeric characters</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="no_text">No information</string>
    <string name="exists">This user already exists</string>
    <string name="wrong_name">No user with this name</string>
    <string name="wrong_pass">Wrong password</string>
    <string name="input_your_password">Input your password</string>
    <string name="or_use_fingerprint">Or use fingerprint</string>
    <plurals name="correct_passwords">
        <item quantity="zero">No safe passwords</item>
        <item quantity="one">%1$d safe password</item>
        <item quantity="two">%1$d safe passwords</item>
        <item quantity="few">%1$d safe passwords</item>
        <item quantity="many">%1$d safe passwords</item>
        <item quantity="other">%1$d safe passwords</item>
    </plurals>
    <plurals name="incorrect_password">
        <item quantity="zero">No unsafe passwords</item>
        <item quantity="one">%1$d unsafe password</item>
        <item quantity="two">%1$d unsafe passwords</item>
        <item quantity="few">%1$d unsafe passwords</item>
        <item quantity="many">%1$d unsafe passwords</item>
        <item quantity="other">%1$d unsafe passwords</item>
    </plurals>
    <plurals name="need_fix">
        <item quantity="zero">No low quality passwords</item>
        <item quantity="one">You should improve %1$d password</item>
        <item quantity="two">You should improve %1$d passwords</item>
        <item quantity="few">You should improve %1$d passwords</item>
        <item quantity="many">You should improve %1$d passwords</item>
        <item quantity="other">You should improve %1$d passwords</item>
    </plurals>
    <string name="chipLetters" translatable="false">abc…</string>
    <string name="upperCaseLetters" translatable="false">ABC…</string>
    <string name="chipNumbers" translatable="false">123…</string>
    <string name="chipSym" translatable="false">./-…</string>
    <string name="length">Length: %1$d</string>
    <string name="numericValue" translatable="false">%1$.2f/5</string>
    <string name="minutesAppLock" translatable="false">%1$d m</string>
    <string name="stringConcat" translatable="false">%1$s%2$d</string>
    <string name="generate" translatable="false">+</string>
    <string name="passCopied">Password was copied to clipboard</string>
    <string name="loginCopied">Login was copied to clipboard</string>
    <string name="nameCopied">Name was copied to clipboard</string>
    <string name="noRules">You should choose at least 1 rule</string>
    <string name="exit_account">Log out</string>
    <string name="name_your_password">Name your password</string>
    <string name="_2fa" translatable="false">2FA</string>
    <string name="set_time_limit">Set time limit</string>
    <string name="add_some_description">Add some description</string>
    <string name="desc">Description:</string>
    <string name="name">Name</string>
    <string name="view_password">View password</string>
    <string name="time_lim">Last changed: %1$s</string>
    <string name="pass">Password:</string>
    <string name="new_pass">New password:</string>
    <string name="hi">Hi, </string>
    <string name="qualityPassword">Password quality:</string>
    <string name="edit">Edit</string>
    <string name="get_info">Info</string>
    <string name="_2fa_you_use_multi_factor_authentication_in_this_app">2FA - you use multi-factor authentication in this app</string>
    <string name="time_limit_we_will_remember_you_to_change_your_password_in_4_months">Time Limit - we will remember you to change your password in 4 months</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="deletePassword">Delete this password</string>
    <string name="delete">Delete</string>
    <string name="passwordDeleteConfirm">Are you really want to this password?</string>
    <string name="passwordDeleted">You password has been deleted</string>
    <string name="accountDeleteConfirm">Are you really want to delete this account?</string>
    <string name="accountExitConfirm">Are you really want to log out this account?</string>
    <string name="accountDelete">Delete this account</string>
    <string name="accountDeleted">You account has been deleted</string>
    <string name="low">low</string>
    <string name="high">high</string>
    <string name="medium">medium</string>
    <string name="no_password">You have no passwords yet. Tap to add your first password.</string>
    <string name="you_decided_to_change_some_settings">You decided to change some settings</string>
    <string name="bio_usage">Biometric usage</string>
    <string name="fingerUnlock">Do you want to use fingerprint unlock?</string>
    <string name="biometricLogin">Fingerprint unlock</string>
    <string name="logWithBio">Log in using your biometric credential</string>
    <string name="usePass">Use account password</string>
    <string name="search_password">Search</string>
    <string name="auto_copy_password">Auto-copy password</string>
    <string name="about_app">About app</string>
    <string name="app_author">Mikhail Grigorev</string>
    <string name="version_and_year" translatable="false">v1.0.2 • 2023</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="vkontakte" translatable="false">Vkontakte</string>
    <string name="sen_email" translatable="false">Send email</string>
    <string name="chooseEmail">Choose Email Client…</string>
    <string name="key_words">Keywords</string>
    <string name="add_keywords">Add keywords</string>
    <string name="you_are_using_this_password_for_a_long_time_you_should_change_it">You are using this password for a long time. You should change it.</string>
    <string name="_2" translatable="false">2</string>
    <string name="_1" translatable="false">1</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_0" translatable="false">0</string>
    <string name="input_your_pin">"Input your pin "</string>
    <string name="set_pin">Set pin</string>
    <string name="settings">Settings</string>
    <string name="incorrectPin">Incorrect pin</string>
    <string name="choose_theme">Theme</string>
    <string name="main_settings">Main</string>
    <string name="save_pin">Save pin</string>
    <string name="day_night_mode">Dark theme</string>
    <string name="defaultSystem">Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="battery_saver">Battery saver</string>
    <string name="set_icon_color_to_current_theme">Set icon color to current theme</string>
    <string name="warning_app_will_be_closed">(Warning: App will be closed)</string>
    <string name="set">Set</string>
    <string name="sameParts">Password contains same parts with</string>
    <string name="favorite">Favorite</string>
    <string name="email_login" translatable="false">E-mail/Login</string>
    <string name="add_email">Add login or e-mail</string>
    <string name="email" translatable="false">E-mail/login</string>
    <string name="emailOnly" translatable="false">E-mail</string>
    <string name="additional_settings">Additional settings</string>
    <string name="showPin">Don\'t show this pin to others</string>
    <string name="time_notification">Time notification</string>
    <string name="total_points">Total quality:</string>
    <string name="exported">Exported successfully to sdcard.</string>
    <string name="imported">Imported successfully from sdcard.</string>
    <string name="inOut">Local backup</string>
    <string name="importFromGoogle">Import from Google Passwords</string>
    <string name="InOutMessage">When you save the data, 2 files in csv format will be opened, you should save them to the device yourself, this is done to avoid data leakage</string>
    <string name="InOutMessage3">You can create csv yourself in the format: (_id, name, password, 2fa, useTimeNotifications, time, tags, groups, login (or e-mail), description). Id, time - will be filled automatically, 2fa, usetime take 1 or 0 depending on usage. Groups initialized to \"#favorite\" if the password is in the favorites</string>
    <string name="warning">Warning!</string>
    <string name="latest_updates_on_my_github_page">Latest updates on my GitHub page</string>
    <string name="about_desc">Powerful password manager with friendly UI, secured system, cool password generator and it\'s own auto-fill framework</string>
    <string name="newPassRule">Password creation rules</string>
    <string name="backupRule">Don\'t forget about backup</string>
    <string name="backupRule1">All your data is stored only on this device. Don\'t forget about a backup (go to Settings)</string>
    <string name="newPassRule1">1. A strong password must be more than 12 characters long and contain three sets of characters: LARGE and small letters, numbers (1,2,3…), special characters (./-…)</string>
    <string name="newPassRule2">2. Do not use publicly available information: parts of the name, phone numbers, dates important to you</string>
    <string name="newPassRule3">3. Use different passwords. If any password is publicly available, hackers can gain access to your other accounts.</string>
    <string name="ivSmilePasswordCreation">ivSmilePasswordCreation</string>
    <string name="back">Back</string>
    <string name="export">Export</string>
    <string name="importFile">Import</string>
    <string name="account_info">Account</string>
    <string name="e_mail">Reserve e-mail</string>
    <string name="closeButton">Close</string>
    <string name="saveButton">Save</string>
    <string name="newMail">Enter your e-mail</string>
    <string name="forgotPasswordText">Forgot password?</string>
    <string name="enterYourLogin">Enter your login to restore pass</string>
    <string name="emailWasSent">Email with password sent to your email</string>
    <string name="userDidNotSetMail">You didn\'t set your e-mail =(</string>
    <string name="crypt">Crypt</string>
    <string name="cipherInfo">Crypt - your password will be stored encrypted and will only be decrypted when shown </string>
    <string name="save_password">Save password</string>
    <string name="add_password">Add password</string>
    <string name="encrypted">Encrypted</string>
    <string name="bank_card">Bank Card</string>
    <string name="set_pin_helper">You should input 4 numbers</string>
    <string name="mail_description">If you forget your password, it will be sent to your email</string>
    <string name="slowLoading">Enabling encryption slows down the loading of the password list</string>
    <string name="pin">PIN</string>
    <string name="newPassIdea"> Password creation idea</string>
</resources>