<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.pin_code.set.SetPinActivity">

    <TextView
        android:id="@+id/tvUsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/hi_username"
        android:textColor="@color/textDark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvAccountAvatar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="25dp"
        android:backgroundTint="@color/ic_account"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAvatarSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="@color/white"
            android:text="@string/_0" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPinId"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:helperText="@string/set_pin_helper"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPinIdField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_pin"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/inputPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/set_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardNums"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/colorLight"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/num1"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    app:rippleColor="?attr/colorPrimary"
                    android:text="@string/_1"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/num2"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    app:rippleColor="?attr/colorPrimary"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/_2"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/num3"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/_3"
                    app:rippleColor="?attr/colorPrimary"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/num4"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/_4"
                    app:rippleColor="?attr/colorPrimary"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/num5"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/_5"
                    app:rippleColor="?attr/colorPrimary"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/num6"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/_6"
                    app:rippleColor="?attr/colorPrimary"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/num7"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/_7"
                    app:rippleColor="?attr/colorPrimary"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/num8"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/_8"
                    app:rippleColor="?attr/colorPrimary"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/num9"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/_9"
                    app:rippleColor="?attr/colorPrimary"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/erase"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:rippleColor="?attr/colorPrimary"
                    android:contentDescription="@string/fingerUnlock"
                    android:src="@drawable/chevron_left"
                    android:tint="@color/black" />

                <Button
                    android:id="@+id/num0"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/_0"
                    app:rippleColor="?attr/colorPrimary"
                    android:textColor="@color/black" />

                <ImageButton
                    android:id="@+id/savePin"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:alpha="0"
                    app:rippleColor="?attr/colorPrimary"
                    android:contentDescription="@string/save_pin"
                    android:src="@drawable/content_save_outline"
                    android:tint="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>